# systemwide-vst

./: .gitignore  CMakeLists.txt  README.md  systemwide_vst.jucer
.run/: All.run.xml  BinaryData.run.xml  Juce Makefile.run.xml  SystemwideIO.run.xml
Source/: LookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginSelectionTableModel.h  PluginWindow.h
assets/: systemwide-vst.desktop
projucer-generated/: AppConfig.h  CMakeLists.txt
src/: BinaryData.cpp  BinaryData.h  CommandRunner.h  ConfigurationComponent.cpp  ConfigurationComponent.h  ConfigurationWindow.h  CustomLookAndFeel.h  DeviceSelectorComponent.h  LookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.h  MessagesConstants.h  PassthroughProcessor.cpp  PassthroughProcessor.h  PluginSelectionTableModel.h  PluginWindow.h  PulseAudioSink.h  SettingsConstants.h  SystemwideIOProcess.h  SystemwideVSTProcess.h  TrayIconThread.h
